<resources>
    <string name="app_name">Lucerapp</string>
    <string name="hint_correo">Correo eléctronico</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="hint_repetir_contrasenia">Repetir Contraseña</string>
    <string name="registrarseButton">Registrarse</string>
    <string name="registroText">Registro</string>
    <string name="bienvenidoText">Bienvenido</string>
    <string name="entrarButton">Entrar</string>
    <string name="passwordHint">Contraseña</string>
    <string name="userHint">Correo</string>
    <string name="ImageDesc">logo</string>
    <string name="noRegistradoText">¿Aún no estás registrado?</string>
    <string name="registrateButton">Regístrate Aquí</string>
    <string name="lavadora">Lavadora</string>
    <string name="hora_de_inicio">Hora de inicio</string>
    <string name="lavaplatos">lavaplatos</string>
    <string name="aniadir_al_plan">Añadir al plan</string>
    <string name="calcular">Calcular</string>
    <string name="horno">Horno</string>
    <string name="hora_de_fin">Hora de fin</string>
    <string name="textview">TextView</string>
    <string name="electrodomestico">Electrodoméstico</string>
    <string name="vitro">Vitro</string>
    <string name="calculadora">CALCULADORA</string>
    <string name="precios">Precios</string>
    <string name="nav_name">Navigation Drawer</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>