<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/lavadoraButton"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="3dp"
        android:onClick="seleccionarLavadora"
        android:text="@string/lavadora"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lavaplatosButton"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        tools:ignore="SmallSp" />

    <TimePicker
        android:id="@+id/horaFInPicker"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaInicioPicker"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/horaFinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora_de_fin"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/horaFInPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaInicioPicker"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/horaInicioText"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/hora_de_inicio"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/horaInicioPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lavadoraButton"
        app:layout_constraintVertical_bias="1.0" />

    <TimePicker

        android:id="@+id/horaInicioPicker"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <Button
        android:id="@+id/lavaplatosButton"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:onClick="seleccionarLavaPlatos"
        android:text="@string/lavaplatos"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vitroButton"
        app:layout_constraintStart_toEndOf="@+id/lavadoraButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/aniadirButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="Postear"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaFInPicker"
        app:layout_constraintVertical_bias="0.785" />

    <Button
        android:id="@+id/calcularButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:onClick="calcularPrecio"
        android:text="@string/calcular"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/aniadirButton"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaFInPicker"
        app:layout_constraintVertical_bias="0.787" />

    <Button
        android:id="@+id/hornoButton"

        android:layout_width="88dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="8dp"
        android:onClick="seleccionarHorno"
        android:text="@string/horno"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vitroButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/EDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/electrodomestico"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/lavadoraButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/vitroButton"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:onClick="seleccionarVitro"
        android:text="@string/vitro"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hornoButton"
        app:layout_constraintStart_toEndOf="@+id/lavaplatosButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/calculadoraText"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@color/gray"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/calculadora"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/EDText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/estimacionText"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginBottom="18dp"
        android:text="Precio"
        android:textColor="@color/violet"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/calcularButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaFInPicker"
        app:layout_constraintVertical_bias="0.84"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/AhorroTextView"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="Ahorro"
        android:textColor="@color/violet"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/calcularButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaFInPicker"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/ahorroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Has ahorrado:"
        app:layout_constraintBottom_toTopOf="@+id/AhorroTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toEndOf="@+id/estimacionText"
        app:layout_constraintTop_toBottomOf="@+id/horaFInPicker"
        app:layout_constraintVertical_bias="0.948" />

    <TextView
        android:id="@+id/costeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Coste: "
        app:layout_constraintBottom_toTopOf="@+id/estimacionText"
        app:layout_constraintEnd_toStartOf="@+id/ahorroText"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaFInPicker"
        app:layout_constraintVertical_bias="0.974" />

</androidx.constraintlayout.widget.ConstraintLayout>